--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <body>
     <!-- ==== START Profile Header SECTION ==== -->
-  	<div class="section blue-grey">
+  	<div class="section deep-purple-accent-">
   		<div class="container center-align">
 				<h2 class="#d500f9">Hi! I'm Vanessa</h2>
 				<h3 class="white-text light">Web Application Developer</h3>
