--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
   	<div class="section deep-purple-accent-">
   		<div class="container center-align">
 				<h2 class="#d500f9">Hi! I'm Vanessa</h2>
-				<h3 class="white-text light">Web Application Developer</h3>
-				<h5 class="orange-text light">What can I code for you?</h5>
+				<h3 class="pink-text light">Web Application Developer</h3>
+				<h5 class="deep-purple-text light">What can I code for you?</h5>
   		</div>
   	</div>
     <!-- ==== END Profile Header SECTION==== -->
