--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <!-- Page Title -->
-    <title>Vanessa Shalkey's Website</title>
+    <title>Ja'Niya Unique's Website</title>
   </head>
 
   <body>
     <!-- ==== START Profile Header SECTION ==== -->
   	<div class="section deep-purple-accent-">
   		<div class="container center-align">
-				<h2 class="#d500f9">Hi! I'm Vanessa</h2>
-				<h3 class="pink-text light">Web Application Developer</h3>
-				<h5 class="deep-purple-text light">What can I code for you?</h5>
+				<h2 class="#d500f9">The Best of Both Worlds!</h2>
+				<h3 class="pink-text light">Inside of 'Ja'Niya' and 'JFab'</h3>
+				<h5 class="deep-purple-text light">A spice of my lifestyle.. ay</h5>
   		</div>
   	</div>
     <!-- ==== END Profile Header SECTION==== -->
