--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <body>
     <!-- ==== START Profile Header SECTION ==== -->
-  	<div class="setion #8c9eff indigo accent-1">
+  	<div class="setion #f8bbd0 pink lighten-4">
   		<div class="container center-align">
 				<h2 class="#d500f9" >The Best of Both Worlds! </h2>
 				<h3 class="pink-text light"> Inside of 'Ja'Niya' and 'JFab'</h3>
