--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   		<div class="container center-align">
 				<h2 class="#d500f9" >The Best of Both Worlds! </h2>
 				<h3 class="pink-text light"> Inside of 'Ja'Niya' and 'JFab'</h3>
-				<h5 class="deep-purple-text light"> A spice of my lifestyle..ay </h5>
+				<h5 class="deep-purple-text light"> A spice of my lifestyle.. </h5>
   		</div>
   	</div>
     <!-- ==== END Profile Header SECTION==== -->
