--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   	</div>
     <!-- ==== END Profile Header SECTION==== -->
 
+        <div class="card-panel teal lighten-2">This is a card panel with a teal lighten-2 class</div>
     <!--Import jQuery before materialize.js-->
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <!-- Compiled and minified JavaScript -->
