--- a/index.html
+++ b/index.html
@@ -4,12 +4,17 @@
   <head>
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Sedgwick+Ave+Display" rel="stylesheet">
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.1/css/materialize.min.css">
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <!-- Page Title -->
     <title>Ja'Niya Unique's Website</title>
+    <style>
+    body{font-family: 'Sedgwick Ave Display', cursive;
+  }
+  </style>
   </head>
 
   <body>
