--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Sedgwick+Ave+Display" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Sedgwick+Ave" rel="stylesheet">
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.1/css/materialize.min.css">
     <!--Let browser know website is optimized for mobile-->
@@ -12,7 +12,7 @@
     <!-- Page Title -->
     <title>Ja'Niya Unique's Website</title>
     <style>
-    body{font-family: 'Sedgwick Ave Display', cursive;
+    body{font-family: 'Sedgwick Ave', cursive;
   }
   </style>
   </head>
