--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
   		</div>
   	</div>
     <!-- ==== END Profile Header SECTION==== -->
-
-        <div class="card-panel teal lighten-2">Add me on Snapchat @janiya-unique Follow me on Instagram @janiyauniquee!</div>
+    <img src="images/sister_photo.jpg"> 
+        <div class="card-panel teal lighten-2">Add me on Snapchat @janiya-unique--- Follow me on Instagram @janiyauniquee!</div>
     <!--Import jQuery before materialize.js-->
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <!-- Compiled and minified JavaScript -->
