--- a/index.html
+++ b/index.html
@@ -17,6 +17,19 @@
   </style>
   </head>
 
+    <div class="card">
+      <div class="card-image waves-effect waves-block waves-light">
+        <img class="activator" src="images/cheer_photo.jpg">
+      </div>
+      <div class="card-content">
+        <span class="card-title activator grey-text text-darken-4">Card Title<i class="material-icons right">more_vert</i></span>
+        <p><a href="#">This is a link</a></p>
+      </div>
+      <div class="card-reveal">
+        <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
+        <p>Here is some more information about this product that is only revealed once clicked on.</p>
+      </div>
+    </div>
   <body>
     <!-- ==== START Profile Header SECTION ==== -->
   	<div class="setion #f8bbd0 pink lighten-4">
@@ -27,7 +40,7 @@
   		</div>
   	</div>
     <!-- ==== END Profile Header SECTION==== -->
-    <img src="images/sister_photo.jpg"> 
+    <img src="images/sister_photo.jpg">
         <div class="card-panel teal lighten-2">Add me on Snapchat @janiya-unique--- Follow me on Instagram @janiyauniquee!</div>
     <!--Import jQuery before materialize.js-->
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
