added cheer pic

--- a/index.html
+++ b/index.html
@@ -14,23 +14,12 @@
     <style>
     body{font-family: 'Sedgwick Ave', cursive;
   }
+  #cheer {
+    /*width: 70%;*/
+  }
   </style>
   </head>
-
-    <div class="card">
-      <div class="card-image waves-effect waves-block waves-light">
-        <img class="activator" src="images/cheer_photo.jpg">
-      </div>
-      <div class="card-content">
-        <span class="card-title activator grey-text text-darken-4">Card Title<i class="material-icons right">more_vert</i></span>
-        <p><a href="#">This is a link</a></p>
-      </div>
-      <div class="card-reveal">
-        <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
-        <p>Here is some more information about this product that is only revealed once clicked on.</p>
-      </div>
-    </div>
-  <body>
+    <body>
     <!-- ==== START Profile Header SECTION ==== -->
   	<div class="setion #f8bbd0 pink lighten-4">
   		<div class="container center-align">
@@ -40,6 +29,21 @@
   		</div>
   	</div>
     <!-- ==== END Profile Header SECTION==== -->
+    <div class="container">
+        <div id="cheer" class="card">
+          <div class="card-image waves-effect waves-block waves-light">
+            <img class="activator" src="images/cheer_photo.jpg">
+          </div>
+          <div class="card-content">
+            <span class="card-title activator grey-text text-darken-4">Card Title<i class="material-icons right">more_vert</i></span>
+            <p><a href="#">This is a link</a></p>
+          </div>
+          <div class="card-reveal">
+            <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
+            <p>Here is some more information about this product that is only revealed once clicked on.</p>
+          </div>
+        </div>
+      </div>  
     <img src="images/sister_photo.jpg">
         <div class="card-panel teal lighten-2">Add me on Snapchat @janiya-unique--- Follow me on Instagram @janiyauniquee!</div>
     <!--Import jQuery before materialize.js-->
