added an about me

--- a/index.html
+++ b/index.html
@@ -35,15 +35,19 @@
             <img class="activator" src="images/cheer_photo.jpg">
           </div>
           <div class="card-content">
-            <span class="card-title activator grey-text text-darken-4">Card Title<i class="material-icons right">more_vert</i></span>
+            <span class="card-title activator grey-text text-darken-4">Reveal A Little About Ja'Niya<i class="material-icons right">more_vert</i></span>
             <p><a href="#">This is a link</a></p>
           </div>
           <div class="card-reveal">
-            <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
-            <p>Here is some more information about this product that is only revealed once clicked on.</p>
+            <span class="card-title grey-text text-darken-4">About Me!<i class="material-icons right">close</i></span>
+            <p> A 16 year old black girl living in Seattle Washington.
+               Happy, spirited, courageous, kind-hearted is all me.
+           Smiles never leave and a spice of attitude is always around.
+            A cheerleader, 3.8 Rainier Beach Highschool Junior.
+             A love for fashion, and a life long goal to be a pediatric nurse!</p>
           </div>
         </div>
-      </div>  
+      </div>
     <img src="images/sister_photo.jpg">
         <div class="card-panel teal lighten-2">Add me on Snapchat @janiya-unique--- Follow me on Instagram @janiyauniquee!</div>
     <!--Import jQuery before materialize.js-->
