change picture size

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
   #cheer {
     /*width: 70%;*/
   }
+  #sister{
+   width: 50%;}
   </style>
   </head>
     <body>
@@ -48,7 +50,7 @@
           </div>
         </div>
       </div>
-    <img src="images/sister_photo.jpg">
+    <img id="sister"src="images/sister_photo.jpg">
         <div class="card-panel teal lighten-2">Add me on Snapchat @janiya-unique--- Follow me on Instagram @janiyauniquee!</div>
     <!--Import jQuery before materialize.js-->
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
