--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
   #cheer {
     /*width: 70%;*/
   }
-  #sister{
-   width: 50%;}
+  #school, #janiya,#sister{
+   width: 30%;}
   </style>
   </head>
     <body>
@@ -50,11 +50,25 @@
           </div>
         </div>
       </div>
-    <img id="sister"src="images/sister_photo.jpg">
+    <img id="sister"src="images/sister_photo.jpg"> <img id="school" src= "images/school_photo.jpg"> <img id="janiya" src="images/janiya_photo.jpg">
         <div class="card-panel teal lighten-2">Add me on Snapchat @janiya-unique--- Follow me on Instagram @janiyauniquee!</div>
     <!--Import jQuery before materialize.js-->
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.1/js/materialize.min.js"></script>
+    <!-- ==== START Contact Me SECTION ==== -->
+  	<div id="contact" class="section"></div>
+  		<div class="container divider"></div>
+  			<div class="container section center-align">
+  				<h2 class="pink-text">Contact Me</h2>
+  				<p class="flow-text">You can get in touch with me on Facebook by clicking on the icons or send me a message using the form below. I would love to hear from you!</p>
+  <!-- Social Media Links -->
+  				<div class="row">
+  					<a href="https://www.facebook.com/janiyaunique" class="tooltipped" data-position="bottom" data-delay="25" data-tooltip="LinkedIn" target="_blank">
+  						<img class="responsive-img" src="images/linkedin-hex.png">
+  					</a>
+  					<a href="sms:1-808-421-7908" class="tooltipped hide-on-med-and-up" data-position="bottom" data-delay="25" data-tooltip="iMessage" target="_blank">
+  						<img class="responsive-img" src="images/imessage-hex.png">
+      <!-- === END Contact Me SECTION === -->
   </body>
 </html>
